# dolfin_dg

./: .gitignore  pyproject.toml
demo/dolfinx/advection/: dg_linear_advection.py
demo/dolfinx/compressible_navier_stokes_naca0012/: dg_naca0012_2d.py
dolfin_dg/: dg_form.py
src/dolfin_dg/: operators.py
src/dolfin_dg/dolfinx/: dwr.py
